<resources>
    <string name="app_name">MyCurriculumVitae</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="centres_d_inter_ts">Centres d\'interêts</string>
    <string name="langues">Langues</string>
    <string name="anglais_parl_et_crit">Anglais parlé et écrit :</string>
    <string name="contr_les_spanc_en_anglais">Contrôles SPANC en Anglais</string>
    <string name="s_jours_linguistiques_en_su_de">Séjours linguistiques en Suède</string>
    <string name="voyages_sportifs_au_luxembourg_deauville_la_baule_l_anglais_au_polo_est_toujours_utile">Voyages Sportifs au Luxembourg, Deauville, La Baule (l\'anglais au polo est toujours utile)</string>
    <string name="etudes_scientifiques_en_section_europ_enne">Etudes Scientifiques en section Européenne</string>
    <string name="italien_scolaire">Italien scolaire</string>
    <string name="etudes">Etudes</string>
    <string name="_2010_2012_btsa_gestion_et_ma_trise_de_l_eau">2010 - 2012 : BTSA Gestion et Maîtrise de l\'eau option GSEA en alternance</string>
    <string name="_2009_2010_licence_de_biologie_toulon">2009 - 2010 : Licence de Biologie à Toulon</string>
    <string name="_2019_concepteur_d_applications_android_bac_4_avec_openclassroom">2019 : Concepteur d\'applications Android (bac + 4) avec OpenClassroom</string>
    <string name="exp_riences">Expériences</string>
    <string name="octobre_d_cembre_2016_perfectionnement_en_r_seau_urbain_et_management">Octobre - Décembre 2016 : Perfectionnement en Réseau Urbain et Management.</string>
    <string name="mai_2014_31_octobre_2015_mise_en_place_et_g_stion_du_service_anc_pour_une_collectivit">Mai 2014 - 31 octobre 2015 : Mise en place et gestion du service ANC pour une collectivité.</string>
    <string name="_2012_mai_2013_saur_charg_de_missions_aupr_s_du_chef_de_secteur">2012 - mai 2013 : SAUR Chargé de missions auprès du Chef de secteur.</string>

    <!-- Home Fragment -->
    <string name="comp_tences">Compétences</string>
    <string name="logicielles">Logicielles</string>
    <string name="android_studio">Android studio</string>
    <string name="git_et_github">Git et GitHub</string>
    <string name="drupal_7_et_8">Drupal 7 et 8</string>
    <string name="html5_et_css3">HTML5 et CSS3</string>
    <string name="java">Java</string>
    <string name="symfony">Symfony</string>
    <string name="php_et_mysql">PHP et MySQL</string>
    <string name="canva">Canva</string>
    <string name="gimp">Gimp</string>
    <string name="sig_cart_jour_g_r_mi_mapinfo_et_qgis">SIG : Cart@jour, Gérémi, mapinfo et Qgis</string>
    <string name="le_logiciel_saphir_pour_l_eau_potable">Le logiciel Saphir pour l\'eau potable</string>
    <string name="autocad">Autocad</string>
    <string name="la_suite_microsoft_et_open_office">La suite Microsoft et open Office</string>
    <string name="administratives">Administratives</string>
    <string name="documents_de_communication">Documents de communication</string>
    <string name="site_internet">Site internet</string>
    <string name="g_stion_d_une_base_de_donn_e_en_biologie">Gestion d\'une base de données en Biologie</string>
    <string name="communication_au_pr_s_des_usagers">Communication au près des usagers</string>
    <string name="commissions_avec_des_lus">Commissions avec des élus</string>
    <string name="r_unions_publics_et_professionneles">Réunions publics et professionnelles</string>
    <string name="rapports_et_collectes_des_donn_es_sur_logiciel">Rapports et collectes des données sur logiciel</string>
    <string name="budget_pr_visionnel_et_facturation">Budget prévisionnel et facturation</string>
    <string name="techniques">Techniques</string>
    <string name="intervention_et_suivi_sur_des_cas_sp_ciaux_ex_une_laiterie">Intervention et suivi sur des cas spéciaux (ex : une laiterie)</string>
    <string name="mesure_et_r_glages_en_station_et_r_servoir">Mesure et réglages en station et réservoir</string>
    <string name="suivi_et_contr_le_de_chantier">Suivi et contrôle de chantier</string>
    <string name="chiffrage_de_travaux">Chiffrage de travaux</string>
    <string name="recherche_et_r_paration_de_fuites_sur_r_seau">Recherche et réparation de fuites sur réseau</string>
    <string name="mise_en_place_de_la_t_l_rel_ve_type_sofrel">Mise en place de la télé relève : type sofrel</string>
    <string name="participation_aux_groupes_de_travail_d_partementale_r_gionnale_et_nationnale">Participation aux groupes de travail, départementale, régionnale et nationnale.</string>

    <!-- Coordonnées Fragment -->
    <string name="_90_chemin_des_cercols">90 chemin des cercols</string>
    <string name="_26_250_livron_sur_drome">26 250 Livron sur Drome</string>
    <string name="_06_43_41_44_74">06 43 41 44 74</string>
    <string name="_09_62_10_40_66">09 62 10 40 66</string>
    <string name="david_oconte_orange_fr">david.oconte@orange.fr</string>
    <string name="linkedin">Linkedin :</string>
    <string name="mes_coordonn_es">Mes Coordonnées</string>

    <!-- Interests Fragment -->
    <string name="quitation_galop_7">Equitation galop 7</string>
    <string name="polo_en_competition_champion_de_france_2016">Polo en competition champion de france 2016</string>
    <string name="jeux_vid_os_sur_multisupports">Jeux vidéos sur multisupports</string>
    <string name="vtt">VTT</string>
    <string name="randonn_es">Randonnées</string>
    <string name="s_jour_venise_murano">Séjour à venise, Murano</string>
    <string name="_2010_2012_btsa_gemeau_option_gsea_en_alternance">2010 - 2012 : BTSA GEMEAU option GSEA en alternance.</string>
    <string name="image_for_illustrated_the_text">Image for illustrated the text</string>
</resources>
