<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/activity_main_drawer_coordonnees"
                android:icon="@color/colorSecondary"
                android:title="@string/mes_coordonn_es" />
        </group>

        <item android:title="Configuration">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/activity_main_drawer_experiences"
                        android:icon="@color/colorAccent"
                        android:title="Experiences" />
                    <item
                        android:id="@+id/activity_main_drawer_etudes"
                        android:icon="@color/colorAccent"
                        android:title="Etudes" />
                    <item
                        android:id="@+id/activity_main_drawer_langues"
                        android:icon="@color/colorSecondary"
                        android:title="@string/langues" />
                    <item
                        android:id="@+id/activity_main_drawer_interests"
                        android:icon="@color/colorSecondary"
                        android:title="@string/centres_d_inter_ts" />
                </group>
            </menu>
        </item>

    </menu>