<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_news_rootview3"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/titleText"
            android:text="@string/etudes"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="@dimen/small_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2019_concepteur_d_applications_android_bac_4_avec_openclassroom"/>

        <View
            android:id="@+id/separator1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="@dimen/small_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2010_2012_btsa_gestion_et_ma_trise_de_l_eau"/>

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="@dimen/small_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2009_2010_licence_de_biologie_toulon"/>

        <View
            android:id="@+id/separator3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="@dimen/small_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2009 : Bac S option biologie écologie"/>

    </LinearLayout>

</LinearLayout>